# pnspy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/source/: conf.py  index.rst
src/minpack/: lmder.f
src/pns/: __init__.py  base.py  lmder.py  pns.py  pss.py  transform.py  transformers.py  util.py
tests/: test_dtype.py  test_pns.py
