[build-system]
requires = ["setuptools", "numpy", "meson", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "pypns"
version = "0.0.0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "A lightweight package for principal nested spheres (PNS) analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://pypi.python.org/pypi/pypns/"
source = "https://github.com/JSS95/pypns"
documentation = "https://pypns.readthedocs.io"

[project.optional-dependencies]
scipy = [
    "scipy",
]
test = [
    "pytest",
]
doc = [
    "sphinx",
    "numpydoc",
    "pydata_sphinx_theme",
    "matplotlib",
]
dev = [
    "flake8",
    "black",
    "isort",
    "pypns[test,doc]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore=doc --doctest-modules --import-mode=importlib"
